[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "altair>=5.4.1",
  "fastapi>=0.112.2",
  "httpx>=0.27.2",
  "streamlit>=1.38.0"
]
description = "Test API performance from a dashboard"
name = "api-performance-tester"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
